--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-auth:20.5.0'
 
+    implementation 'com.google.android.material:material:1.8.0'
 }
