--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.Cat"
         tools:targetApi="31">
         <activity
+            android:name=".AddActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:label="ADD CAT PICTURE"
+            android:theme="@style/CustomNoActionBarTheme"/>
+        <activity
             android:name=".RegisterActivity"
             android:exported="false" />
         <activity
