--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:20.5.0'
 
     implementation 'com.google.android.material:material:1.8.0'
+
+    implementation 'com.karumi:dexter:6.2.3'
 }
