--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,13 +40,19 @@ dependencies {
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-auth-ktx:21.3.0'
+    implementation 'com.google.firebase:firebase-storage-ktx:20.0.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     implementation 'com.google.android.gms:play-services-auth:20.5.0'
 
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.squareup.picasso:picasso:2.8'
+
     implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.google.firebase:firebase-database:20.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
 
     implementation 'com.karumi:dexter:6.2.3'
 }
