--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,10 +49,21 @@ dependencies {
 
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.squareup.picasso:picasso:2.8'
+// Firestore
+    implementation 'com.google.firebase:firebase-firestore:23.0.3'
+
+// Glide for image loading
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'com.google.firebase:firebase-database:20.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
 
     implementation 'com.karumi:dexter:6.2.3'
+    apply plugin: 'com.google.gms.google-services'
+
+
+
 }
+
